# fin-sight

./: .gitignore  implementation-plan.md  project-brief.md
fin-sight/: README.md
fin-sight/backend/: Cargo.toml
fin-sight/backend/migrations/: 202403071946_create_schema.sql  202403071947_fix_sqlite_types.sql
fin-sight/backend/src/: auth.rs  database.rs  main.rs  models.rs  repositories.rs  routes.rs  simple_routes.rs
fin-sight/backend/tests/: integration.rs
